feat: Warmer microcopy in all locales (DA/BS/TR) + cleanup duplicate keys + update changelog

--- a/tryg-app/src/locales/bs.json
+++ b/tryg-app/src/locales/bs.json
@@ -50,7 +50,7 @@
     "daily_briefing_symptom_warning": "{{name}} je zabilježila simptome. Lijekovi: {{completed}}/{{total}} uzeto.",
     "daily_briefing_meds_missing": "{{name}} nedostaje {{count}} lijekova danas.",
     "daily_briefing_checked_in": "{{name}} se prijavila danas. Sve izgleda u redu.",
-    "daily_briefing_no_activity": "Danas još nema aktivnosti od {{name}}.",
+    "daily_briefing_no_activity": "{{name}} vjerovatno još odmara – nema aktivnosti za sada.",
     "streak_msg_7": "🏆 {{count}}. dan zaredom da su svi lijekovi uzeti!",
     "streak_msg_3": "🎉 {{count}}. dan zaredom!",
     "maybe_later": "Možda kasnije",
@@ -77,8 +77,8 @@
     "more": "više",
     "others": "ostali",
     "din_status": "Vaš status",
-    "waiting_first_check": "Čeka se prva provjera...",
-    "last_checked_in": "Zadnji put",
+    "waiting_first_check": "Čekamo da kažemo zdravo...",
+    "last_checked_in": "Zadnji put viđeno",
     "taken": "obavljeno",
     "you": "ti",
     "today": "Danas",
@@ -103,7 +103,7 @@
     "replies_count": "{{count}} odgovora",
     "reply_verb": "Odgovori",
     "write_reply_placeholder": "Napišite odgovor...",
-    "no_answers_yet": "Još nema odgovora. Budi prvi!",
+    "no_answers_yet": "Još niko nije odgovorio – budi prvi! 💬",
     "open_weekly_question": "Otvori sedmično pitanje",
     "symptoms_today_count": "Današnji simptomi ({{count}})",
     "be_the_first": "Budi prvi!",
@@ -140,7 +140,7 @@
     "stable_symptoms_msg": "{{count}} simptoma ove sedmice",
     "symptoms_this_week": "{{count}} simptoma ove sedmice",
     "see_full_history": "Vidi punu historiju simptoma →",
-    "no_activity_yet": "Još nema aktivnosti",
+    "no_activity_yet": "Mirno je ovdje – još nema aktivnosti",
     "add_own_task": "Dodaj vlastiti zadatak",
     "completed_tasks_count_special": "Obavljeni zadaci ({{count}})",
     "time_period_morning": "Jutro",
@@ -169,9 +169,9 @@
     "mic_permission_denied": "Pristup mikrofonu odbijen",
     "mic_access_error": "Greška pri pristupu mikrofonu",
     "audio_recorder_not_supported": "Snimanje zvuka nije podržano",
-    "livsbog_title": "Životna knjiga (Sjećanja)",
-    "no_memories_yet": "Još nema sjećanja",
-    "memories_will_appear_here": "Životne priče će se pojaviti ovdje",
+    "livsbog_title": "Životna knjiga ❤️",
+    "no_memories_yet": "Ovdje će procvjetati tvoja sjećanja...",
+    "memories_will_appear_here": "Životne priče se ovdje skupljaju s vremenom",
     "stories": "priče",
     "untilted_memory": "Bez naslova",
     "audio": "Audio",
@@ -219,7 +219,7 @@
     "chart_filter_hint": "Pritisnite na stubac za filtriranje",
     "symptom_log_title": "Dnevnik simptoma",
     "symptom_log_last_14_days": "(zadnjih 14 dana)",
-    "no_symptoms_recorded": "Nema registriranih simptoma.",
+    "no_symptoms_recorded": "Nema simptoma – bravo! ✨",
     "symptoms_count_label": "simptoma",
     "unknown": "Nepoznato",
     "location_prefix": "Lokacija",
@@ -279,10 +279,6 @@
     "match_task_visit_relative": "☕ Posjeti {{name}}",
     "match_task_transport_relative": "🚗 Odvezi {{name}}",
     "time_days_ago_short": "prije {{count}} dana",
-    "today": "Danas",
-    "task_completed": "Završeno",
-    "symptom_log_item": "Simptom: {{label}}",
-    "no_activity_yet": "Još nema aktivnosti",
     "general": "Općenito",
     "privacy_data": "Privatnost i podaci",
     "seneste_aktivitet": "Nedavna aktivnost"
