--- a/tryg-app/src/locales/tr.json
+++ b/tryg-app/src/locales/tr.json
@@ -50,7 +50,7 @@
     "daily_briefing_symptom_warning": "{{name}} belirti kaydetti. İlaç: {{completed}}/{{total}} alındı.",
     "daily_briefing_meds_missing": "{{name}} bugün {{count}} ilacı eksik.",
     "daily_briefing_checked_in": "{{name}} bugün giriş yaptı. Her şey yolunda görünüyor.",
-    "daily_briefing_no_activity": "{{name}} tarafından bugün henüz aktivite yok.",
+    "daily_briefing_no_activity": "{{name}} herhalde hala dinleniyor – henüz aktivite yok.",
     "streak_msg_7": "🏆 Üst üste {{count}}. gün tüm ilaçlar alındı!",
     "streak_msg_3": "🎉 Üst üste {{count}}. gün!",
     "maybe_later": "Belki sonra",
@@ -77,8 +77,8 @@
     "more": "daha",
     "others": "diğer",
     "din_status": "Durumun",
-    "waiting_first_check": "İlk kontrol bekleniyor...",
-    "last_checked_in": "Son",
+    "waiting_first_check": "Merhaba demeni bekliyoruz...",
+    "last_checked_in": "Son görülme",
     "taken": "tamamlandı",
     "you": "sen",
     "today": "Bugün",
@@ -103,7 +103,7 @@
     "replies_count": "{{count}} cevap",
     "reply_verb": "Cevapla",
     "write_reply_placeholder": "Bir cevap yaz...",
-    "no_answers_yet": "Henüz cevap yok. İlk sen ol!",
+    "no_answers_yet": "Henüz kimse cevap vermedi – ilk sen ol! 💬",
     "open_weekly_question": "Haftanın sorusunu aç",
     "symptoms_today_count": "Bugünkü belirtiler ({{count}})",
     "be_the_first": "İlk sen ol!",
@@ -140,7 +140,7 @@
     "stable_symptoms_msg": "Bu hafta {{count}} belirti",
     "symptoms_this_week": "Bu hafta {{count}} belirti",
     "see_full_history": "Tam belirti geçmişini gör →",
-    "no_activity_yet": "Henüz aktivite yok",
+    "no_activity_yet": "Burada sessiz – henüz aktivite yok",
     "add_own_task": "Kendi görevini ekle",
     "completed_tasks_count_special": "Tamamlanan görevler ({{count}})",
     "time_period_morning": "Sabah",
@@ -169,9 +169,9 @@
     "mic_permission_denied": "Mikrofon izni reddedildi",
     "mic_access_error": "Mikrofon erişim hatası",
     "audio_recorder_not_supported": "Ses kaydı desteklenmiyor",
-    "livsbog_title": "Yaşam Defteri (Anılar)",
-    "no_memories_yet": "Henüz anı yok",
-    "memories_will_appear_here": "Yaşam hikayeleri burada görünecek",
+    "livsbog_title": "Yaşam Defteri ❤️",
+    "no_memories_yet": "Anıların burada çiçek açacak...",
+    "memories_will_appear_here": "Yaşam hikayeleri zamanla burada toplanır",
     "stories": "hikaye",
     "untilted_memory": "Adsız",
     "audio": "Ses",
@@ -219,7 +219,7 @@
     "chart_filter_hint": "Filtrelemek için bir sütuna dokunun",
     "symptom_log_title": "Semptom Günlüğü",
     "symptom_log_last_14_days": "(son 14 gün)",
-    "no_symptoms_recorded": "Kayıtlı semptom yok.",
+    "no_symptoms_recorded": "Semptom yok – harika! ✨",
     "symptoms_count_label": "semptom",
     "unknown": "Bilinmeyen",
     "location_prefix": "Konum",
@@ -279,10 +279,6 @@
     "match_task_visit_relative": "☕ {{name}}'i ziyaret et",
     "match_task_transport_relative": "🚗 {{name}}'i götür",
     "time_days_ago_short": "{{count}} gün önce",
-    "today": "Bugün",
-    "task_completed": "Tamamlandı",
-    "symptom_log_item": "Semptom: {{label}}",
-    "no_activity_yet": "Henüz aktivite yok",
     "general": "Genel",
     "privacy_data": "Gizlilik ve veriler",
     "seneste_aktivitet": "Son aktivite"
