docs: session handoff updates (security, architecture, dependencies)

--- a/tryg-app/src/locales/da.json
+++ b/tryg-app/src/locales/da.json
@@ -56,7 +56,7 @@
     "streak_msg_3": "🎉 {{count}}. dag i træk!",
     "maybe_later": "Måske senere",
     "status_avail_now": "Status: Har tid nu",
-    "coordination_title": "Familie-udveksling",
+    "coordination_title": "Familie Børsen",
     "others_offers": "Fra andre pårørende:",
     "from_senior_name": "Fra {{name}}:",
     "you_offer": "Du tilbyder:",
