Implement high-legibility Mirror Architecture visualization in ARCHITECTURE.md

--- a/tryg-app/docs/handoff-2025-12-21.md
+++ b/tryg-app/docs/handoff-2025-12-21.md
@@ -1,37 +1,47 @@
 # Session Handoff - 2025-12-21
 
 ## Project State
-- **Current branch**: main (assumed)
-- **Dev server**: `npm run dev`
+- **Dev Server**: `npm run dev`
+- **Current Focus**: Admin Actions in "Livstræet" (Family Tree) and UI Polish.
 
 ## Changes Made This Session
 | File | Change |
 |------|--------|
-| `firestore.rules` | Added admin overwrite permissions for `dinko1991@hotmail.com`. |
-| `firebase.json` | Added Firestore rules deployment config. |
-| `.firebaserc` | Added default project alias. |
-| `mcp_config.json` | **MAJOR REPAIR**: Fixed corruption, configured You.com as local npm package, switched GitHub to npx. |
-| `docs/design_prompts.md` | Created documentation of specific design extraction prompts as requested. |
-| `ShareModal.tsx` | Added readability styling to inputs and enabled relationship editing. |
-| `SettingsModal.tsx` | Reverted to standard settings tabs (removed duplicate profile editing). |
-| `FamilyPresence.tsx` | Fixed "-1m" timer bug. |
+| `src/hooks/useCareCircle.ts` | **Refactored** update function to support `docId` updates. **BROKEN STATE** (see below). |
+| `src/components/ui/MemberActionMenu.tsx` | **Refactored** to use `createPortal` (fix clipping) and pass `member.docId`. |
+| `src/features/visualizations/FamilyTree.tsx` | **Updated** layout for siblings, added admin interactions, renamed header. |
+| `src/components/ShareModal.tsx` | Renamed "FAMILIENS OVERBLIK" to "LIVSTRÆET" header. |
+| `src/AppCore.tsx` | Fixed `ShareModal` receiving `memberStatuses` instead of `members`. |
+| `src/index.css` | Added `!important` to `.no-scrollbar` utility. |
 
-## Key Patterns Discovered
-- **MCP Config Fragility**: The `mcp_config.json` is prone to corruption when multiple tools edit it concurrently or if terminal output buffers overlap. Always read before write, and use atomic writes if possible.
-- **You.com MCP**: Requires `serverUrl` AND `url` (or `command` mapping) depending on the client. The most robust fix was switching to the local npm package `@youdotcom-oss/mcp`.
-- **Firestore Admin**: For POCs, hardcoding an admin email in `firestore.rules` is a quick way to bypass strict "owner-only" policies without building a full role-based access control (RBAC) system.
+## 🚨 Active Issues (CRITICAL)
+### 1. `useCareCircle.ts` Reference Error
+**The Bug**: I renamed the function `updateAnyMember` to `updateMemberByDocId` but **forgot to update the return object**.
+**Current Code**:
+```typescript
+const updateMemberByDocId = useCallback(...) // Line 255
+return {
+    ...
+    updateAnyMember, // ERROR: updateAnyMember is not defined!
+}
+```
+**Fix Required**: Change the return statement to `updateMemberByDocId` or alias it.
+
+### 2. Rename Failure
+**User Report**: "I tried to rename Fatima, but the update didn't go through."
+**Cause**: The above `ReferenceError` meant the hook wasn't returning a valid function, or the component couldn't call it. Once #1 is fixed, `MemberActionMenu` is already updated to pass `docId`, which should work.
+
+### 3. Layout Spacing
+**User Report**: "Lot of unused space around the element".
+**Status**: The `FamilyTree` is in a container with fixed/min-height or padding that needs checking in `ShareModal`.
 
 ## Decisions Made
 | Decision | Rationale |
 |----------|-----------|
-| **Switch GitHub MCP to npx** | The Docker version was failing because Docker wasn't available/configured. `npx` works out of the box. |
-| **Admin Email in Rules** | Faster to implement for the user's specific demo needs than a full "Family Admin" role. |
-
-## Active Issues
-- [ ] **GitHub PAT Security**: The PAT is stored in plaintext in a file in the user's home directory. This is standard for local config but worth noting.
-- [ ] **You.com Rate Limits**: User encountered 429/502 errors previously; resolved by config change but upstream stability varies.
+| **Use `docId` for Updates** | `userId` is not always present or unique enough in the context of firestore paths for all member types (e.g. legacy/manual members). `docId` is the surest way to target the correct document. |
+| **Portals for Menus** | `ShareModal` uses `overflow: hidden` or `transform`, which clips usage of `MemberActionMenu` popovers. Moving to `createPortal(..., document.body)` ensures visibility. |
 
 ## Quick Start for Next Session
-1. **Verify MCP**: Check that all 5 servers (Firebase, GitHub, Perplexity, You.com, Chrome) are green in the agent UI.
-2. **Demo Prep**: The user is prepping for a demo. Ensure the "Superpower" editing in ShareModal works for `dinko1991@hotmail.com`.
-3. **Design Reference**: If asked about design style, refer to `docs/design_prompts.md`.
+1.  **IMMEDIATELY FIX** `src/hooks/useCareCircle.ts`: Update the return object to export `updateMemberByDocId`.
+2.  **Verify Rename**: Launch app, open Livstræet, rename a member. It should work now.
+3.  **Polish Layout**: Check `ShareModal` styling for the "unused space" around the tree.
