--- a/tryg-app/src/locales/da.json
+++ b/tryg-app/src/locales/da.json
@@ -2,11 +2,11 @@
     "settings": "Indstillinger",
     "language_selection": "Vælg sprog",
     "sign_out": "Log ud",
-    "family_circle": "Familie-cirkel",
+    "family_circle": "Familiens Overblik",
     "invite_code": "Invitationskode",
     "show_invite_code": "Vis invitationskode",
     "logged_in_as": "Logget ind som",
-    "family_heart": "Familiens Hjerte",
+    "family_heart": "Familiens Overblik",
     "medication_title": "Medicin",
     "pain_question": "Hvordan har du det?",
     "greeting_morning": "Godmorgen",
@@ -282,5 +282,18 @@
     "theme_light": "Lys",
     "general": "Generelt",
     "privacy_data": "Privatliv & data",
-    "seneste_aktivitet": "Seneste aktivitet"
+    "seneste_aktivitet": "Seneste aktivitet",
+    "relation_mother": "Mor",
+    "relation_father": "Far",
+    "relation_son": "Søn",
+    "relation_daughter": "Datter",
+    "relation_grandson": "Barnebarn (Han)",
+    "relation_granddaughter": "Barnebarn (Hun)",
+    "relation_sister": "Søster",
+    "relation_brother": "Bror",
+    "relation_friend": "Ven",
+    "relation_caregiver": "Hjælper",
+    "relation_other": "Andet",
+    "your_relation_to_target": "Hvem er {{name}} for dig?",
+    "relation_custom_placeholder": "Eller skriv selv..."
 }
