docs: session handoff 2025-12-21

--- a/tryg-app/docs/handoff-2025-12-21.md
+++ b/tryg-app/docs/handoff-2025-12-21.md
@@ -1,47 +1,37 @@
 # Session Handoff - 2025-12-21
 
 ## Project State
-- **Dev Server**: `npm run dev`
-- **Current Focus**: Admin Actions in "Livstræet" (Family Tree) and UI Polish.
+- **Current branch**: main
+- **Last commit**: fd72d49 - Comprehensive Table of Contents sync across all documentation
+- **Dev server**: `npm run dev`
 
 ## Changes Made This Session
 | File | Change |
 |------|--------|
-| `src/hooks/useCareCircle.ts` | **Refactored** update function to support `docId` updates. **BROKEN STATE** (see below). |
-| `src/components/ui/MemberActionMenu.tsx` | **Refactored** to use `createPortal` (fix clipping) and pass `member.docId`. |
-| `src/features/visualizations/FamilyTree.tsx` | **Updated** layout for siblings, added admin interactions, renamed header. |
-| `src/components/ShareModal.tsx` | Renamed "FAMILIENS OVERBLIK" to "LIVSTRÆET" header. |
-| `src/AppCore.tsx` | Fixed `ShareModal` receiving `memberStatuses` instead of `members`. |
-| `src/index.css` | Added `!important` to `.no-scrollbar` utility. |
+| `FamilyTree.tsx` | Refined "Søskende" label with pill design; centered on lines; removed badge overlap. |
+| `FamilyTree.tsx` | Implemented **Stable Slot Heuristic** to prevent lineage breakage upon member renaming. |
+| `AmbientTab.tsx` | Fixed medication contrast issues in dark mode with theme-aware tokens (`.theme-card`). |
+| `ARCHITECTURE.md` | Overhauled with **Mirror Architecture** visualization (Mermaid + ASCII accessibility). |
+| `ROADMAP.md` | Added Multi-Family Relational Schema and "X-in-law" support strategies. |
+| `IDEATION.md` | Introduced "Connection Rituals" and "In-Law Visibility" concepts for onboarding. |
+| `LEARNINGS.md` | Added 3 new entries on Stable Slots, Theme Tokens, and Doc Accessibility. |
 
-## 🚨 Active Issues (CRITICAL)
-### 1. `useCareCircle.ts` Reference Error
-**The Bug**: I renamed the function `updateAnyMember` to `updateMemberByDocId` but **forgot to update the return object**.
-**Current Code**:
-```typescript
-const updateMemberByDocId = useCallback(...) // Line 255
-return {
-    ...
-    updateAnyMember, // ERROR: updateAnyMember is not defined!
-}
-```
-**Fix Required**: Change the return statement to `updateMemberByDocId` or alias it.
-
-### 2. Rename Failure
-**User Report**: "I tried to rename Fatima, but the update didn't go through."
-**Cause**: The above `ReferenceError` meant the hook wasn't returning a valid function, or the component couldn't call it. Once #1 is fixed, `MemberActionMenu` is already updated to pass `docId`, which should work.
-
-### 3. Layout Spacing
-**User Report**: "Lot of unused space around the element".
-**Status**: The `FamilyTree` is in a container with fixed/min-height or padding that needs checking in `ShareModal`.
+## Key Patterns Discovered
+- **Mirror Protocol**: The app is not two apps; it's a shared core projected through role-specific "Lenses". UI components should be shared as much as possible.
+- **Stable Slots**: Using immutable `userId` sorting to map heuristic relationship roles (Partner, Sibling) avoids breakage from mutable name changes.
 
 ## Decisions Made
 | Decision | Rationale |
 |----------|-----------|
-| **Use `docId` for Updates** | `userId` is not always present or unique enough in the context of firestore paths for all member types (e.g. legacy/manual members). `docId` is the surest way to target the correct document. |
-| **Portals for Menus** | `ShareModal` uses `overflow: hidden` or `transform`, which clips usage of `MemberActionMenu` popovers. Moving to `createPortal(..., document.body)` ensures visibility. |
+| ASCII + Mermaid | Ensure high-fidelity architectural clarity that remains accessible in text-only dev environments. |
+| Theme-Aware Tokens | Fix dark mode "ghost text" permanently without ad-hoc Tailwind overrides. |
+| Positional Slots | Avoided premature relational database refactoring while providing immediate lineage stability for the POC. |
+
+## Active Issues
+- [ ] **Data Scalability**: The Family Tree currently only supports 2-3 children via process-of-elimination logic.
+- [ ] **Hardcoded Admin**: Admin bypass is still linked to `dinko1991@hotmail.com` in `firestore.rules`.
 
 ## Quick Start for Next Session
-1.  **IMMEDIATELY FIX** `src/hooks/useCareCircle.ts`: Update the return object to export `updateMemberByDocId`.
-2.  **Verify Rename**: Launch app, open Livstræet, rename a member. It should work now.
-3.  **Polish Layout**: Check `ShareModal` styling for the "unused space" around the tree.
+1. Run `npm run dev`.
+2. The current focus is **Stage 2: Relational Migration**.
+3. Start by reviewing the **Relational Schema** section in `ROADMAP.md` to move beyond the Stable Slot heuristic.
