feat(locales): localized welcome flow for da, bs, tr

--- a/tryg-app/src/locales/bs.json
+++ b/tryg-app/src/locales/bs.json
@@ -294,5 +294,32 @@
     "relation_caregiver": "Njegovatelj",
     "relation_other": "Ostalo",
     "your_relation_to_target": "Ko je {{name}} za tebe?",
-    "relation_custom_placeholder": "Ili upiši sam..."
+    "relation_custom_placeholder": "Ili upiši sam...",
+    "symptom_advice_nausea": "Mala gutljaja vode i svjež zrak mogu pomoći.",
+    "symptom_advice_headache": "Ne zaboravite piti vodu i odmarati se u tišini.",
+    "symptom_advice_dizzyness": "Ustajte polako i držite se za nešto stabilno.",
+    "symptom_advice_pain": "Obratite se doktoru ako bol potraje ili se pogorša.",
+    "symptom_advice_generic": "Nazovite da čujete kako su. Glas puno znači.",
+    "symptom_insight_title": "{{symptom}} je najčešći ove sedmice",
+    "symptom_insight_general": "Pregled simptoma",
+    "symptom_insight_generic_body": "Bilo je raznih simptoma. Možda je vrijeme za razgovor?",
+    "history_last_7_days": "Zadnjih 7 dana",
+    "symptoms_today_none": "Nema simptoma danas",
+    "symptoms_all_good": "Sve izgleda dobro! Nema unosa.",
+    "onboarding_senior_0_title": "Dobrodošli kući",
+    "onboarding_senior_0_body": "Upalili smo svjetlo za vas. Ovdje je sigurno i toplo.",
+    "onboarding_senior_1_title": "Upoznajte Kapetana",
+    "onboarding_senior_1_body": "Ja sam Kapetan Tryg. Ja brinem o tehnici, tako da se vi možete opustiti.",
+    "onboarding_senior_2_title": "Sigurno Putovanje",
+    "onboarding_senior_2_body": "Plovimo sigurno kroz svakodnevnicu zajedno sa vašom porodicom.",
+    "onboarding_senior_3_title": "Niste sami",
+    "onboarding_senior_3_body": "Vaši najmiliji su na brodu. Sve je u redu.",
+    "onboarding_relative_0_title": "Dobrodošli na brod",
+    "onboarding_relative_0_body": "Ovdje stvaramo mir za cijelu porodicu. Sada ste važan dio Tryg kruga.",
+    "onboarding_relative_1_title": "Krug Brige",
+    "onboarding_relative_1_body": "Dio ste tima koji radi zajedno. Dijelimo odgovornost, tako da niko nije sam.",
+    "onboarding_relative_2_title": "Držite Kurs",
+    "onboarding_relative_2_body": "Sa Tryg-om pomažete u upravljanju brodom bez preuzimanja kormila. Poštovanje i samostalnost su ključni.",
+    "onboarding_relative_3_title": "Zajednički Front",
+    "onboarding_relative_3_body": "Jednostavnija svakodnevnica za oboje. Hajde da vas povežemo."
 }
