--- a/tryg-app/src/locales/da.json
+++ b/tryg-app/src/locales/da.json
@@ -295,5 +295,32 @@
     "relation_caregiver": "Hjælper",
     "relation_other": "Andet",
     "your_relation_to_target": "Hvem er {{name}} for dig?",
-    "relation_custom_placeholder": "Eller skriv selv..."
+    "relation_custom_placeholder": "Eller skriv selv...",
+    "symptom_advice_nausea": "Kvalme kan lindres med ingefær-te og frisk luft.",
+    "symptom_advice_headache": "Husk at drikke vand og sikre ro omkring dig.",
+    "symptom_advice_dizzyness": "Rejs dig langsomt og støt dig til noget fast.",
+    "symptom_advice_pain": "Kontakt læge hvis smerter fortsætter eller forværres.",
+    "symptom_advice_generic": "Ring og hør hvordan det går. En stemme varmer.",
+    "symptom_insight_title": "{{symptom}} fylder mest denne uge",
+    "symptom_insight_general": "Symptom overblik",
+    "symptom_insight_generic_body": "Der har været lidt blandede symptomer. Måske en god tid til en snak?",
+    "history_last_7_days": "Sidste 7 dage",
+    "symptoms_today_none": "Ingen symptomer i dag",
+    "symptoms_all_good": "Alt ser fint ud! Ingen registreringer.",
+    "onboarding_senior_0_title": "Velkommen hjem",
+    "onboarding_senior_0_body": "Vi har tændt lyset for dig. Herinde er der trygt og varmt.",
+    "onboarding_senior_1_title": "Mød din Kaptajn",
+    "onboarding_senior_1_body": "Jeg er Kaptajn Tryg. Jeg passer på teknikken, så du kan slappe af.",
+    "onboarding_senior_2_title": "En Sikker Rejse",
+    "onboarding_senior_2_body": "Vi sejler sikkert gennem hverdagen sammen med din familie.",
+    "onboarding_senior_3_title": "Du er ikke alene",
+    "onboarding_senior_3_body": "Dine kære er med ombord. Alt er vel.",
+    "onboarding_relative_0_title": "Velkommen Ombord",
+    "onboarding_relative_0_body": "Her skaber vi ro i maven for hele familien. Du er nu en vigtig del af Tryg-hjulet.",
+    "onboarding_relative_1_title": "Cirklen af Omsorg",
+    "onboarding_relative_1_body": "Du er en del af et hold, der løfter i flok. Vi deler ansvaret, så ingen står alene.",
+    "onboarding_relative_2_title": "Hold Kursen",
+    "onboarding_relative_2_body": "Med Tryg hjælper du med at styre skibet uden at overtage roret. Respekt og autonomi er nøglen.",
+    "onboarding_relative_3_title": "Fælles Front",
+    "onboarding_relative_3_body": "En enklere hverdag for jer begge. Lad os få jer forbundet."
 }
