--- a/tryg-app/src/locales/tr.json
+++ b/tryg-app/src/locales/tr.json
@@ -294,5 +294,32 @@
     "relation_caregiver": "Bakıcı",
     "relation_other": "Diğer",
     "your_relation_to_target": "{{name}} senin için kim?",
-    "relation_custom_placeholder": "Veya kendin yaz..."
+    "relation_custom_placeholder": "Veya kendin yaz...",
+    "symptom_advice_nausea": "Zencefil çayı ve temiz hava mide bulantısına iyi gelir.",
+    "symptom_advice_headache": "Su içmeyi ve sessiz bir ortamda dinlenmeyi unutmayın.",
+    "symptom_advice_dizzyness": "Yavaşça ayağa kalkın ve sabit bir yerden destek alın.",
+    "symptom_advice_pain": "Ağrı devam ederse veya kötüleşirse doktora danışın.",
+    "symptom_advice_generic": "Arayıp nasıl olduklarını sorun. Bir ses iyi gelir.",
+    "symptom_insight_title": "Bu hafta en çok {{symptom}} görüldü",
+    "symptom_insight_general": "Belirti özeti",
+    "symptom_insight_generic_body": "Karışık belirtiler vardı. Belki konuşmak için iyi bir zaman?",
+    "history_last_7_days": "Son 7 gün",
+    "symptoms_today_none": "Bugün belirti yok",
+    "symptoms_all_good": "Her şey iyi görünüyor! Kayıt yok.",
+    "onboarding_senior_0_title": "Eve Hoş Geldiniz",
+    "onboarding_senior_0_body": "Sizin için ışığı açtık. Burası güvenli ve sıcak.",
+    "onboarding_senior_1_title": "Kaptanla Tanışın",
+    "onboarding_senior_1_body": "Ben Kaptan Tryg. Siz rahatlayın diye teknik işlerle ben ilgileniyorum.",
+    "onboarding_senior_2_title": "Güvenli Yolculuk",
+    "onboarding_senior_2_body": "Ailenizle birlikte günlük hayatta güvenle yol alıyoruz.",
+    "onboarding_senior_3_title": "Yalnız Değilsiniz",
+    "onboarding_senior_3_body": "Sevdikleriniz de gemide. Her şey yolunda.",
+    "onboarding_relative_0_title": "Gemiye Hoş Geldiniz",
+    "onboarding_relative_0_body": "Burada tüm aile için huzur sağlıyoruz. Artık Tryg çarkının önemli bir parçasısınız.",
+    "onboarding_relative_1_title": "Bakım Çemberi",
+    "onboarding_relative_1_body": "Birlikte hareket eden bir takımın parçasısınız. Sorumluluğu paylaşıyoruz, kimse yalnız değil.",
+    "onboarding_relative_2_title": "Rotayı Koru",
+    "onboarding_relative_2_body": "Tryg ile dümeni devralmadan gemiyi yönlendirmeye yardımcı olursunuz. Saygı ve özerklik anahtardır.",
+    "onboarding_relative_3_title": "Ortak Cephe",
+    "onboarding_relative_3_body": "Her ikiniz için de daha basit bir günlük yaşam. Gelin sizi birbirinize bağlayalım."
 }
