fix: neutralize gendered language and soften clinical terms

--- a/tryg-app/src/locales/bs.json
+++ b/tryg-app/src/locales/bs.json
@@ -27,7 +27,7 @@
     "notification_water_title": "Ne zaboravite popiti vodu",
     "notification_water_body": "Vrijeme je za vaš čaš vode u 10:00",
     "coffee_invite_title": "{{name}} zove na kafu!",
-    "coffee_invite_sub": "Stavila je kafu i ima vremena za posjetu.",
+    "coffee_invite_sub": "Kafa je spremna i ima vremena za posjetu.",
     "coffee_invite_accept": "Svratiću",
     "coffee_ready_desc": "Porodica može vidjeti da imate vremena.",
     "coffee_off_desc": "Pokažite da su vaša vrata otvorena.",
@@ -44,12 +44,12 @@
     "peace_sub_check_in": "Ima zadataka na koje treba obratiti pažnju",
     "peace_sub_morning_missing": "Nisu svi jutarnji zadaci obavljeni",
     "peace_sub_afternoon_missing": "Nisu svi popodnevni zadaci obavljeni",
-    "daily_briefing_all_fine": "Sve izgleda u redu. {{name}} je imala miran dan.",
-    "daily_briefing_meds_fine": "{{name}} je uzela sve lijekove. Sve je dobro.",
-    "daily_briefing_symptom_noted": "{{name}} je zabilježila {{symptom}} u {{time}}, ali je uzela lijek.",
-    "daily_briefing_symptom_warning": "{{name}} je zabilježila simptome. Lijekovi: {{completed}}/{{total}} uzeto.",
+    "daily_briefing_all_fine": "Sve izgleda u redu. {{name}} je imao/la miran dan.",
+    "daily_briefing_meds_fine": "{{name}} je uzeo/la sve lijekove. Sve je dobro.",
+    "daily_briefing_symptom_noted": "{{name}} je zabilježio/la {{symptom}} u {{time}}, ali je uzeo/la lijek.",
+    "daily_briefing_symptom_warning": "{{name}} je zabilježio/la simptome. Lijekovi: {{completed}}/{{total}} uzeto.",
     "daily_briefing_meds_missing": "{{name}} nije uzeo/la {{count}} doza lijekova.",
-    "daily_briefing_checked_in": "{{name}} se prijavila danas. Sve izgleda u redu.",
+    "daily_briefing_checked_in": "{{name}} se prijavio/la danas. Sve izgleda u redu.",
     "daily_briefing_no_activity": "{{name}} vjerovatno još odmara – nema aktivnosti za sada.",
     "streak_msg_7": "🏆 {{count}}. dan zaredom da su svi lijekovi uzeti!",
     "streak_msg_3": "🎉 {{count}}. dan zaredom!",
