--- a/tryg-app/src/locales/da.json
+++ b/tryg-app/src/locales/da.json
@@ -28,7 +28,7 @@
     "notification_water_title": "Husk at drikke vand",
     "notification_water_body": "Det er tid til dit glas vand kl. 10:00",
     "coffee_invite_title": "{{name}} giver kaffe!",
-    "coffee_invite_sub": "Hun har sat kanden over og har tid til besøg.",
+    "coffee_invite_sub": "Kaffen er sat over og der er tid til besøg.",
     "coffee_invite_accept": "Jeg kigger forbi",
     "coffee_ready_desc": "Familien kan se, at du har tid.",
     "coffee_off_desc": "Vis at din dør er åben.",
@@ -126,7 +126,7 @@
     "most_frequent_count": "Mest hyppige ({{count}}x)",
     "symptom_overview_14_days": "Symptom-oversigt (14 dage)",
     "symptoms_count": "{{count}} symptomer",
-    "medicine_compliance_7_days": "Overholdelse af medicin (7 dage)",
+    "medicine_compliance_7_days": "Medicin status (7 dage)",
     "symptom_log_14_days": "Symptom Log (sidste 14 dage)",
     "no_symptoms_registered": "Ingen symptomer registreret.",
     "locale_code": "da-DK",
